[gd_scene load_steps=15 format=4 uid="uid://cp7kow8up3or1"]

[ext_resource type="Texture2D" uid="uid://bf5lqcmhcym74" path="res://Art/Tileset.png" id="1_j5nid"]
[ext_resource type="Script" path="res://level.gd" id="1_n3tua"]
[ext_resource type="Texture2D" uid="uid://cwh3aw1l8leg7" path="res://Art/FallGroundTileset.png" id="3_w4atn"]
[ext_resource type="Texture2D" uid="uid://c601c5ve3ep64" path="res://Art/Trees.png" id="4_p0yxo"]
[ext_resource type="PackedScene" uid="uid://dx7m3vt4ucaps" path="res://player.tscn" id="5_cd65v"]
[ext_resource type="PackedScene" uid="uid://yo85lb556e0c" path="res://apple.tscn" id="6_io4y8"]
[ext_resource type="PackedScene" uid="uid://bnj2bial2j2ly" path="res://tortoise.tscn" id="6_n74dk"]
[ext_resource type="PackedScene" uid="uid://b7pcmeccqgmlf" path="res://tile_map_trees.tscn" id="8_p1ddy"]
[ext_resource type="PackedScene" uid="uid://b03sxa6hccx8b" path="res://pause_menu.tscn" id="8_q1hm6"]
[ext_resource type="PackedScene" uid="uid://bnkp5t6srbs57" path="res://textbox.tscn" id="9_l6o5r"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ob0h"]
texture = ExtResource("1_j5nid")
0:0/0 = 0
1:0/0 = 0
1:0/0/custom_data_0 = true
0:1/0 = 0
0:1/0/custom_data_0 = true
0:1/0/custom_data_1 = true
1:1/0 = 0
1:1/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6vipx"]
texture = ExtResource("3_w4atn")
3:0/0 = 0
3:0/0/custom_data_0 = true
4:1/0 = 0
4:1/0/custom_data_0 = true
4:1/0/custom_data_1 = true
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
1:6/0/custom_data_0 = true
2:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o2lkg"]
texture = ExtResource("4_p0yxo")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_yw5av"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "isGoal"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_3ob0h")
sources/1 = SubResource("TileSetAtlasSource_6vipx")
sources/2 = SubResource("TileSetAtlasSource_o2lkg")

[node name="Level1" type="Node2D"]
script = ExtResource("1_n3tua")
level_number = 1

[node name="TileMap" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAQAAQAAAAYAAAABAAQAAQABAAYAAAACAAMAAQABAAYAAAACAAQAAQABAAYAAAADAAQAAQACAAYAAAADAAMAAQACAAYAAAABAAMAAQABAAYAAAAAAAMAAQAFAAYAAAACAAIAAQABAAYAAAACAAEAAQAEAAEAAAADAAEAAQACAAYAAAADAAIAAQACAAYAAAAAAAUAAQAAAAcAAAABAAUAAQABAAcAAAACAAUAAQABAAcAAAADAAUAAQACAAcAAAD//wMAAQAAAAcAAAD//wIAAQAAAAYAAAD//wEAAQAAAAYAAAD//wAAAQAAAAUAAAAAAAAAAQABAAUAAAABAAAAAQABAAUAAAACAAAAAQABAAUAAAADAAAAAQACAAUAAAABAAIAAQABAAYAAAABAAEAAQABAAYAAAAAAAEAAQABAAYAAAAAAAIAAQABAAYAAAD//wQAAQADAAUAAAD//wUAAQADAAUAAAD+/wQAAQADAAUAAAD+/wUAAQADAAUAAAD+/wYAAQADAAUAAAD9/wYAAQADAAUAAAD9/wcAAQADAAUAAAD+/wcAAQADAAUAAAD//wcAAQADAAUAAAAAAAcAAQADAAUAAAAAAAYAAQADAAUAAAD//wYAAQADAAUAAAABAAYAAQADAAUAAAACAAYAAQADAAUAAAADAAYAAQADAAUAAAABAAcAAQADAAUAAAACAAcAAQADAAUAAAADAAcAAQADAAUAAAAEAAcAAQADAAUAAAAFAAcAAQADAAUAAAAFAAYAAQADAAUAAAAFAAUAAQADAAUAAAAFAAQAAQADAAUAAAAFAAMAAQADAAUAAAAFAAIAAQADAAUAAAAFAAEAAQADAAUAAAAFAAAAAQADAAUAAAAFAP//AQADAAUAAAAEAP//AQADAAUAAAAEAAAAAQADAAUAAAAEAAEAAQADAAUAAAAEAAIAAQADAAUAAAAEAAMAAQADAAUAAAAEAAQAAQADAAUAAAAEAAUAAQADAAUAAAAEAAYAAQADAAUAAAADAP//AQADAAUAAAACAP//AQADAAUAAAABAP//AQADAAUAAAAAAP//AQADAAUAAAD/////AQADAAUAAAD+////AQADAAUAAAD9////AQADAAUAAAD9/wAAAQADAAUAAAD9/wEAAQADAAUAAAD9/wIAAQADAAUAAAD9/wMAAQADAAUAAAD9/wQAAQADAAUAAAD9/wUAAQADAAUAAAD+/wMAAQADAAUAAAD+/wIAAQADAAUAAAD+/wEAAQADAAUAAAD+/wAAAQADAAUAAAD8//7/AQADAAUAAAD8////AQADAAUAAAD8/wAAAQADAAUAAAD8/wEAAQADAAUAAAD8/wIAAQADAAUAAAD8/wMAAQADAAUAAAD8/wQAAQADAAUAAAD8/wUAAQADAAUAAAD8/wYAAQADAAUAAAD8/wcAAQADAAUAAAD8/wgAAQADAAUAAAD9/wgAAQADAAUAAAD+/wgAAQADAAUAAAD//wgAAQADAAUAAAAAAAgAAQADAAUAAAABAAgAAQADAAUAAAACAAgAAQADAAUAAAADAAgAAQADAAUAAAAEAAgAAQADAAUAAAAFAAgAAQADAAUAAAAGAAgAAQADAAUAAAAGAAcAAQADAAUAAAAGAAYAAQADAAUAAAAGAAUAAQADAAUAAAAGAAQAAQADAAUAAAAGAAMAAQADAAUAAAAGAAIAAQADAAUAAAAGAAEAAQADAAUAAAAGAAAAAQADAAUAAAAGAP//AQADAAUAAAAGAP7/AQADAAUAAAAFAP7/AQADAAUAAAAEAP7/AQADAAUAAAADAP7/AQADAAUAAAACAP7/AQADAAUAAAABAP7/AQADAAUAAAAAAP7/AQADAAUAAAD///7/AQADAAUAAAD+//7/AQADAAUAAAD9//7/AQADAAUAAAA=")
tile_set = SubResource("TileSet_yw5av")

[node name="Player" parent="." instance=ExtResource("5_cd65v")]
position = Vector2(24, 72)

[node name="Tortoise" parent="." instance=ExtResource("6_n74dk")]
position = Vector2(16, 32)

[node name="Apple" parent="." instance=ExtResource("6_io4y8")]
position = Vector2(40, 56)

[node name="TileMapLayer" parent="." instance=ExtResource("8_p1ddy")]
tile_map_data = PackedByteArray("AAD+/wQAAAABAAMAAAD//wQAAAAHAAYAAAD9/wUAAAAJAAUAAAAAAAcAAAAHAAQAAAAFAAYAAAAJAAIAAAAEAAcAAAAJAAUAAAAEAAAAAAADAAQAAAAFAAEAAAAHAAQAAAD9////AAAJAAIAAAD//wAAAAADAAQAAAAGAAQAAAADAAQAAAABAP7/AAAHAAYAAAA=")

[node name="Textbox" parent="." instance=ExtResource("9_l6o5r")]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource("8_q1hm6")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(24, 56)

[connection signal="exit_button_pressed" from="PauseMenu" to="." method="_on_pause_menu_exit_button_pressed"]
[connection signal="restart_button_pressed" from="PauseMenu" to="." method="_on_pause_menu_restart_button_pressed"]
[connection signal="resume_button_pressed" from="PauseMenu" to="." method="_on_pause_menu_resume_button_pressed"]
